--- a/inst/doc/pbdMPI-include/04-windows.tex
+++ b/inst/doc/pbdMPI-include/04-windows.tex
@@ -33,7 +33,7 @@ for the 32-bit MPICH2.
 \addcontentsline{toc}{subsection}{\thesubsection. Install from Binary}
 
 The binary packages of \pkg{pbdMPI} are available on the website:
-``High Performance Statistical Computing'' at
+``Programming with Big Data in R'' at
 \url{http://r-pbd.org/}.
 Note that different MPI systems require different binaries.
 The binary can be installed by
