--- a/inst/doc/pbdMPI-include/01-introduction.tex
+++ b/inst/doc/pbdMPI-include/01-introduction.tex
@@ -1,13 +1,13 @@
 
 {\color{red} \bf Warning:} This document is written to explain the main
-functions of \pkg{pbdMPI}~\citep{Chen2012}, version 0.1-0.
+functions of \pkg{pbdMPI}~\citep{Chen2012}, version 0.1-1.
 Every effort will be made to ensure future versions are consistent with
 these instructions, but features in later versions may not be explained
 in this document.
 
 Information about the functionality of this package,
 and any changes in future versions can be found on website:
-``High Performance Statistical Computing'' at
+``Programming with Big Data in R'' at
 \url{http://r-pbd.org/}.
 %More discussion about parallel computing in \proglang{R}~\citep{Rcore}
 %can be found in~\citet{Schmidberger2009}.
