--- a/inst/doc/pbdMPI-include/pbdMPI.bib
+++ b/inst/doc/pbdMPI-include/pbdMPI.bib
@@ -1,3 +1,12 @@
+@MISC{Chen2012,
+  author = {Chen, W.-C. and Ostrouchov, G. and Schmidt, D. and Patel, P. and
+            Yu, H.},
+  title = {pbdMPI: Programming with Big Data -- Interface to MPI},
+  year = {2012},
+  note = {R Package},
+  url = {http://cran.r-project.org/package=pbdMPI}
+}
+
 @ARTICLE{Schmidberger2009,
   author = {Schmidberger, M. and Morgan, M. and Eddelbuettel, D. and Yu, H. and
             Tierney, L. and Mansmann, U.},
@@ -7,15 +16,6 @@
   volume = {31},
   long_journal = {Journal of Statistical Software}
 }
-
-@MISC{Chen2012,
-  author = {Chen, W.-C. and Ostrouchov, G. and Schmidt, D. and Patel, P. and
-            Yu, H.},
-  title = {pbdMPI: Programming with Big Data -- Interface to MPI},
-  year = {2012},
-  note = {v:0.1-0},
-  url = {http://r-pbd.org/}
-}
 @Manual{Rcore,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
@@ -23,27 +23,26 @@
   address = {Vienna, Austria},
   year = {2012},
   note = {{ISBN} 3-900051-07-0},
-  url = {http://www.R-project.org/},
+  url = {http://www.r-project.org/},
 }
-
 @MISC{Yu2010,
   author = {Yu, H.},
   title = {Rmpi: Interface (Wrapper) to MPI (Message-Passing Interface))},
   year = {2010},
-  note = {v:0.5-9},
-  url = {http://cran.r-project.org/web/packages/Rmpi/index.html}
+  note = {R Package (v:0.5-9)},
+  url = {http://cran.r-project.org/package=Rmpi}
 }
-@Manual{Tierney2012,
+@MISC{Tierney2012,
   title = {snow: Simple Network of Workstations},
   author = {Luke Tierney and A. J. Rossini and Na Li and H. Sevcikova},
   year = {2012},
-  note = {R package version 0.3-9},
-  url = {http://cran.r-project.org/web/packages/snow/index.html}
+  note = {R package (v:0.3-9)},
+  url = {http://cran.r-project.org/package=snow}
 }
-@Manual{Urbanek2011,
+@MISC{Urbanek2011,
   title = {multicore: Parallel processing of R code on machines with multiple cores or CPUs},
   author = {Simon Urbanek},
   year = {2011},
-  note = {R package version 0.1-7},
-  url = {http://cran.r-project.org/web/packages/multicore/index.html}
+  note = {R package (v:0.1-7)},
+  url = {http://cran.r-project.org/package=multicore}
 }
