--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2012-12-13: Ver. 0.1-3
+  * Fix Mac OSX dynamic loading problem.
+  * Fix .GlobalEnv problem.
+  * Fix multi-arch problem.
+  * Add copyright to vignette.
+
 2012-10-30: Ver. 0.1-2
   * Add comm.all and comm.any, and rename g.sort to comm.sort.
 
