--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-07-02: Ver. 0.1-7
+  * Fix man page.
+  * Fix pbdApply.
+  * Add messages to interactive mode.
+  * Drop some barrier in comm.print and comm.cat.
+  * Add FAQ to vignette.
+  * Add fpmmpi.
+  * Add task pull parallelism.
+  * Move vignettes.
+
 2013-03-24: Ver. 0.1-6
   * License changed.
   * Add "block0" to get.jid and fix its bug.
