--- a/vignettes/pbdMPI-include/01-introduction.tex
+++ b/vignettes/pbdMPI-include/01-introduction.tex
@@ -6,7 +6,7 @@ and should not be construed to represent any determination or
 policy of University, Agency, and National Laboratory.
 
 This document is written to explain the main
-functions of \pkg{pbdMPI}~\citep{Chen2012}, version 0.1-1.
+functions of \pkg{pbdMPI}~\citep{Chen2012}, version 0.2-1.
 Every effort will be made to ensure future versions are consistent with
 these instructions, but features in later versions may not be explained
 in this document.
@@ -150,10 +150,10 @@ Further configure arguments include
 \vspace{0.2cm}
 \begin{tabular}{ll} \hline\hline
 Argument                   & Default \\ \hline
-\code{-}\code{--with-Rmpi-type}    & \code{OPENMPI} \\
-\code{-}\code{--with-Rmpi-include} & \code{$\{MPI_ROOT\}/include} \\
-\code{-}\code{--with-Rmpi-libpath} & \code{$\{MPI_ROOT\}/lib} \\
-\code{-}\code{--with-mpi}          & \code{$\{MPI_ROOT\}} \\
+\code{-}\code{--with-mpi-type}    & \code{OPENMPI} \\
+\code{-}\code{--with-mpi-include} & \code{$\{MPI_ROOT\}/include} \\
+\code{-}\code{--with-mpi-libpath} & \code{$\{MPI_ROOT\}/lib} \\
+\code{-}\code{--with-mpi}         & \code{$\{MPI_ROOT\}} \\
 \hline\hline
 \end{tabular}
 \vspace{0.2cm}
@@ -164,12 +164,12 @@ be
 \begin{Command}
 ### Under command mode
 R CMD INSTALL pbdMPI \
-  --configure-args="--with-Rmpi-type=OPENMPI \
+  --configure-args="--with-mpi-type=OPENMPI \
                     --with-mpi=/usr/local"
 R CMD INSTALL pbdMPI \
-  --configure-args="--with-Rmpi-type=OPENMPI \
-                    --with-Rmpi-include=/usr/local/ompi/include \
-                    --with-Rmpi-libpath=/usr/local/ompi/lib"
+  --configure-args="--with-mpi-type=OPENMPI \
+                    --with-mpi-include=/usr/local/ompi/include \
+                    --with-mpi-libpath=/usr/local/ompi/lib"
 \end{Command}
 See the package source file \code{pbdMPI/configure} for details.
 
@@ -258,9 +258,17 @@ Directory & Examples \\ \hline
 \code{pbdMPI/inst/examples/test_parallel/}     & comparison to \pkg{parallel} \\
 \code{pbdMPI/inst/examples/test_performance/}  & performance testing \\
 \code{pbdMPI/inst/examples/test_s4/}           & S4 extension \\
+\code{pbdMPI/inst/examples/test_cs/}           & client/server examples \\
+\code{pbdMPI/inst/examples/test_long_vector/}  & long vector examples \\
 \hline\hline
 \end{tabular}
 \end{center}
+where \code{test_long_vector/} requires to recompile with setting
+\begin{Command}[title=pkg\_constant.h,language=C]
+#define MPI_LONG_DEBUG 1
+\end{Command}
+in \code{pbdMPI/src/pkg_constant.h}.
+See Scetion~\ref{sec:long_vector} for details.
 
 Further examples can be found at including:
 \begin{itemize}
